lib/src/compiler/tests/testdata/errors/2.out
error[E101]: mismatching types
 --> line:3:4
  |
3 |    "foo" == 2
  |    ^^^^^ this expression is `string`
  |             ^ this expression is `integer`
  |